26 November 2013: Wouter
	- Fix segfaults after read of zones with rr type WKS from zonefile.
	- Seed PRNG for openssl at start of daemon, fixes SSL connection issue.

25 November 2013: Wouter
	- (same as in 3.2.16): fix wildcard cname to nxdomain repeated rrset.

11 November 2013: Wouter
	- Fix bug#534: IXFR query loop over UDP for zones that are unchanged.

11 November 2013: Matthijs
	- EUI48 and EUI64 is now RFC 7043

5 November 2013: Wouter
	- Accept interface: as an alternative for ip-address: for
	  consistency with unbound.conf syntax.

29 October 2013: Wouter
	- tag for 4.0.0 release.
	- trunk has 4.0.1 in development, for bug fixes.

24 October 2013: Wouter
	- Fixup zone change code.
	- tag 4.0.0rc3.

21 October 2013: Matthijs
	- Initialize xfrd zone when changing zone from master to slave
	  and delete xfrd zone when changing zone from slave to master.

14 October 2013: Wouter
	- tag 4.0.0rc2.

14 October 2013: Matthijs
	- Additional log messages with reason why RR to be deleted cannot be
	  found.

14 October 2013: Wouter
	- Fix for zone transfer that has different-cased RRSIG signer names
	  or NSEC next-owner names.

9 October 2013: Wouter
	- tsig errors on incoming tsig print key name and source IP of query.

8 October 2013: Wouter
	- Update documentation for nsd -d option.

7 October 2013: Wouter
	- Fix mini_event ev_once flag to be prettier (review comments Yuri).
	- tag 4.0.0rc1 recreated.

4 October 2013: Wouter
	- Fix bug where if you do not have flex, and then install flex, it
	  would not make without a re-untar of the source.

3 October 2013: Wouter
	- Review changes from Matthijs.
	- doc/README updated, 'nsdc' is now removed.

1 October 2013: Wouter
	- Review commits from Matthijs.
	- doc/UPGRADING updated, review Yuri.

30 September 2013: Wouter
	- tag 4.0.0rc1
	- updated doc/RELNOTES

19 September 2013: Wouter
	- configure --disable-recvmmsg for compat with older Linux kernels,